# Softex-backend

./: README.md
javascript_typescript/API_Prisma/: README.md  observacoes.txt  package-lock.json  package.json  script_DB-troca_livros.sql
javascript_typescript/revisando_API/: livros_array.js  livros_bd.js  package-lock.json  package.json  teste_rotas.http
python/: README.md
python/banco_dados/: inner_join.sql
python/consumo_sustentavel/: README.md  __init__.py  controller.py  model.py  utils.py  view_comunidade_organizacao.py  view_gerenciar_comunidades.py  view_gerenciar_organizacoes.py  view_gerenciar_relacionamentos.py  view_menu_principal.py
python/gerenciamento_tarefas/: __main__.py  atualizarTarefa.py  cadastrarTarefa.py  deletarTarefa.py  listarTarefas.py
python/gerenciamento_usuarios/: pyproject.toml
python/gerenciamento_usuarios/gerenciamento_usuarios/: __main__.py
python/gerenciamento_usuarios/gerenciamento_usuarios/config/: db_config.py
python/gerenciamento_usuarios/gerenciamento_usuarios/controllers/: usuarios_controller.py
python/gerenciamento_usuarios/gerenciamento_usuarios/database/: database.py
python/gerenciamento_usuarios/gerenciamento_usuarios/models/: usuarios_model.py
python/gerenciamento_usuarios/gerenciamento_usuarios/utils/: utils.py
python/gerenciamento_usuarios/gerenciamento_usuarios/views/: usuarios_view.py
python/gerenciamento_usuarios_sem_MVC/: README.md  __main__.py  config.py  usuario.py
python/gerenciamento_usuarios_simples/: README.md  __main__.py
python/logica_programacao/: exe026.py  exe028.py  exe27.py  (+1 more)
(+43 files in other folders)
